[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revo"
version = "0.2.1"
authors = [
  { name="Sun Yijiang", email="sunyijiang@gmail.com" },
]
description = "Referenced Values in Objects."
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sunyj/revo"
"Bug Tracker" = "https://github.com/sunyj/revo/issues"
